--- a/BarbaraSantana_Projeto/HTML/contato.html
+++ b/BarbaraSantana_Projeto/HTML/contato.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="/BarbaraSantana_Projeto/CSS/contato_style.css"> -->
-    <link rel="stylesheet" type="text/css" href="/BarbaraSantana_Projeto/CSS/style.css">
-    <script src="/BarbaraSantana_Projeto/JS/app.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/CSS/style.css">
+    <script src="/JS/app.js" defer></script>
     <title>Contato</title>
 </head>
 
